--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,6 @@
 
 .px-bg {
   background-image: url(https://react-scroll-parallax-v3.surge.sh/static/media/bg-grid.abbd0d44.svg);
-  background-color: #222;
+  background-color: rgb(35, 30, 44);
   /* background-color: #fff; */
 }
